--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,4 +1,3 @@
-// Common variables / mixins / functions
 @use "~modularscale-sass/stylesheets/modularscale" as * with
   (
     $modularscale: (
@@ -7,6 +6,10 @@
     )
   );
 
+// Vairables
+$main-font: "Roboto", sans-serif;
+
+// Functions
 @function rhythm($n) {
   @return 8px * $n;
 }
