--- a/src/styles/__common.scss
+++ b/src/styles/__common.scss
@@ -1,23 +1,9 @@
+@forward "ms-sass" with (
+  $default-base: 16px,
+  $default-ratio: 1.125
+);
+
 // Functions
 @function rhythm($n) {
   @return 8px * $n;
-}
-
-@function ms($n) {
-  $_ratio: 1.125;
-  $_result: 16px;
-
-  @if $n > 0 {
-    @for $i from 1 through $n {
-      $_result: $_result * $_ratio;
-    }
-  }
-
-  @if $n < 0 {
-    @for $i from 1 through math.abs($n) {
-      $_result: math.div($_result, $_ratio);
-    }
-  }
-
-  @return $_result;
 }
